
Wed Jul 12 14:10:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Correctly set LD_LIBRARY_PATH.  Also set it before
		using RESOLVE.

Thu Jun 22 12:02:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Change argument ordering for KDC.  Realm must come last.


Mon Jun 19 13:38:27 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Fix setup_root_shell() with LD_LIBRARY_PATH.

Thu Jun 15 18:13:55 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Setup and use LD_LIBRARY_PATH, in case we were built
		with shared libraries.

Fri Jun  9 23:45:08 1995  Theodore Y. Ts'o  <tytso@dcl>

	* default.exp: Use the principal "krbtest/admin@KRBTEST.COM" for
		kadmin 

Thu Jun 8 14:58:15 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Add logging section to the profile.  Also, export
		profile location to root shell.


Mon Jun 5 16:09:25 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Reverse prompting order for kadmin5.


Thu Jun 1 14:48:57 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - Change admin instance name to kadmin.


Fri May 26 17:55:56 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp - fix typo for restoring setting of KRB5_CONFIG on exit.


Fri May 12 16:15:07 EDT 1995	Paul Park	(pjpark@mit.edu)
	* default.exp: Change to use new kadmin/kadmind.  Add entries for
		krbtest/kadmin5, changepw and extraction for changepw service
		entry.

Wed May 10 16:53:28 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: Added domain_realm stanza to krb5.conf.
	               setup_srvtab: Takes optional service name to
		       		       extract. 


Fri May 05 09:21:21 1995  Chris Provenzano (proven@mit.edu)

	* default.exp : Removed FILE: part of env(KRB5CCNAME).

Wed May  3 22:00:48 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* default.exp: (get_hostname): The FQDN returned by resolve needs
		to be made lower case as the host name is entered directly
		into the database.

Mon May  1 21:32:57 1995  Theodore Y. Ts'o  (tytso@dcl)
